--- a/index.html
+++ b/index.html
@@ -460,8 +460,9 @@
       </div>
     </section>
     <!-- Analytics Part End -->
+     
     <!-- Footer Part Start -->
-    <section id="footerPart">
+    <!-- <section id="footerPart">
       <div class="container">
         <div class="footer">
           <div class="row">
@@ -515,7 +516,7 @@
           <p>Terms & condition</p>
         </div>
       </div>
-    </section>
+    </section> -->
     <!-- Footer Part End -->
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/script.js"></script>
